--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "The Season";
+  src: url("/src/assets/fonts/TheSeason.woff2") format("woff2"),
+    url("/src/assets/fonts/TheSeason.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html,
 body {
   margin: 0;
