--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "The Season";
+  src: url("/src/fonts/fonnts.com-theseasons-bd.otf") format("woff2"),
+    url("/src/fonts/fonnts.com-theseasons-bd.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html,
 body {
+  font-family: "The Season", sans-serif;
   margin: 0;
   padding: 0;
   overflow: hidden;
